add ui to project
